# to_do_api

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml
backend/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/task/: models.py  serializers.py  tests.py  urls.py  views.py
backend/task/migrations/: 0001_initial.py  0003_alter_task_priority.py
backend/to_do_api/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: axios.js
frontend/src/components/: Button.jsx  Input.jsx  Layout.jsx  TaskCard.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/pages/: Dashboard.jsx  LoginPage.jsx  RegisterPage.jsx
task/: models.py  serializers.py  views.py
task/migrations/: 0002_alter_task_priority.py  0004_task_owner.py
to_do_api/: settings.py  urls.py
